--- a/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
+++ b/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
@@ -15,7 +15,7 @@
     	
       </td>
       <td width="40%" class="center">
-      	<span class="top"><a href="index.html">Symphony Toolbox</a></span>
+      	<span class="top"><a href="index.html">Symphony</a></span>
 
       </td>
       <td width="30%" class="next">
@@ -27,10 +27,10 @@
 
 
 
-    <span class="path"><a href="index.html">Symphony Toolbox</a> &gt;&gt; Symphony Toolbox</span>
+    <span class="path"><a href="index.html">Symphony</a> &gt;&gt; Symphony Gateway Functions</span>
 
     <br /><br />
-    <h3 class="title-part">Symphony Toolbox</h3>
+    <h3 class="title-part">Symphony Gateway Functions</h3>
 <ul class="list-chapter"><li><a href="sym_addConstr.html" class="refentry">sym_addConstr</a> &#8212; <span class="refentry-description">Add a new constraint</span></li>
 
 
@@ -270,7 +270,7 @@
     	
       </td>
       <td width="40%" class="center">
-      	<span class="top"><a href="index.html">Symphony Toolbox</a></span>
+      	<span class="top"><a href="index.html">Symphony</a></span>
 
       </td>
       <td width="30%" class="next">
