--- a/help/en_US/scilab_en_US_help/sym_addConstr.html
+++ b/help/en_US/scilab_en_US_help/sym_addConstr.html
@@ -12,11 +12,11 @@
     <div class="manualnavbar">
     <table width="100%"><tr>
       <td width="30%">
-    	<span class="previous"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">&lt;&lt; Symphony Toolbox</a></span>
+    	<span class="previous"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">&lt;&lt; Symphony</a></span>
 
       </td>
       <td width="40%" class="center">
-      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony Toolbox</a></span>
+      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony</a></span>
 
       </td>
       <td width="30%" class="next">
@@ -29,7 +29,7 @@
 
 
 
-    <span class="path"><a href="index.html">Symphony Toolbox</a> &gt;&gt; <a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony Toolbox</a> &gt; sym_addConstr</span>
+    <span class="path"><a href="index.html">Symphony</a> &gt;&gt; <a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony</a> &gt; sym_addConstr</span>
 
     <br /><br />
     <div class="refnamediv"><h1 class="refname">sym_addConstr</h1>
@@ -73,11 +73,11 @@
     <tr><td colspan="3" class="next"><a href="http://bugzilla.scilab.org/enter_bug.cgi?product=Scilab%20software&component=Documentation%20pages" class="ulink">Report an issue</a></td></tr>
 <tr>
       <td width="30%">
-    	<span class="previous"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">&lt;&lt; Symphony Toolbox</a></span>
+    	<span class="previous"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">&lt;&lt; Symphony</a></span>
 
       </td>
       <td width="40%" class="center">
-      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony Toolbox</a></span>
+      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony</a></span>
 
       </td>
       <td width="30%" class="next">
