--- a/help/en_US/scilab_en_US_help/sym_setVarUpper.html
+++ b/help/en_US/scilab_en_US_help/sym_setVarUpper.html
@@ -16,7 +16,7 @@
 
       </td>
       <td width="40%" class="center">
-      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony Toolbox</a></span>
+      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony</a></span>
 
       </td>
       <td width="30%" class="next">
@@ -29,7 +29,7 @@
 
 
 
-    <span class="path"><a href="index.html">Symphony Toolbox</a> &gt;&gt; <a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony Toolbox</a> &gt; sym_setVarUpper</span>
+    <span class="path"><a href="index.html">Symphony</a> &gt;&gt; <a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony</a> &gt; sym_setVarUpper</span>
 
     <br /><br />
     <div class="refnamediv"><h1 class="refname">sym_setVarUpper</h1>
@@ -71,7 +71,7 @@
 
       </td>
       <td width="40%" class="center">
-      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony Toolbox</a></span>
+      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony</a></span>
 
       </td>
       <td width="30%" class="next">
