--- a/help/en_US/scilab_en_US_help/sym_solve.html
+++ b/help/en_US/scilab_en_US_help/sym_solve.html
@@ -16,11 +16,12 @@
 
       </td>
       <td width="40%" class="center">
-      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony Toolbox</a></span>
+      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony</a></span>
 
       </td>
       <td width="30%" class="next">
-      	
+      	<span class="next"><a href="symphony.html">symphony &gt;&gt;</a></span>
+
       </td>
     </tr></table>
       <hr />
@@ -28,7 +29,7 @@
 
 
 
-    <span class="path"><a href="index.html">Symphony Toolbox</a> &gt;&gt; <a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony Toolbox</a> &gt; sym_solve</span>
+    <span class="path"><a href="index.html">Symphony</a> &gt;&gt; <a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony</a> &gt; sym_solve</span>
 
     <br /><br />
     <div class="refnamediv"><h1 class="refname">sym_solve</h1>
@@ -68,11 +69,12 @@
 
       </td>
       <td width="40%" class="center">
-      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony Toolbox</a></span>
+      	<span class="top"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">Symphony</a></span>
 
       </td>
       <td width="30%" class="next">
-      	
+      	<span class="next"><a href="symphony.html">symphony &gt;&gt;</a></span>
+
       </td>
     </tr></table>
       <hr />
