--- a/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
+++ b/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
@@ -37,7 +37,7 @@
 
 
 
-<li><a href="qpipopt_mat.html" class="refentry">qpipopt_mat</a> &#8212; <span class="refentry-description">Solves a linear quadratic problem.</span></li>
+<li><a href="qpipoptmat.html" class="refentry">qpipoptmat</a> &#8212; <span class="refentry-description">Solves a linear quadratic problem.</span></li>
 
 
 
@@ -49,7 +49,7 @@
 
 
 
-<li><a href="symphony_mat.html" class="refentry">symphony_mat</a> &#8212; <span class="refentry-description">Solves a mixed integer linear programming constrained optimization problem in intlinprog format.</span></li>
+<li><a href="symphonymat.html" class="refentry">symphonymat</a> &#8212; <span class="refentry-description">Solves a mixed integer linear programming constrained optimization problem in intlinprog format.</span></li>
 
 <li><a href="section_508f0b211d17ea6769714cc144e6b731.html" class="chapter">Symphony Native Functions</a>
 <ul class="list-refentry"><li><a href="sym_addConstr.html" class="refentry">sym_addConstr</a> &#8212; <span class="refentry-description">Add a new constraint</span></li>
