Bugs by Prof fixed 1
Former-commit-id: ad58fd7feb9afc70e264a9c8cffc86d54c831970

--- a/help/en_US/scilab_en_US_help/qpipopt_mat.html
+++ b/help/en_US/scilab_en_US_help/qpipopt_mat.html
@@ -20,7 +20,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="symphony.html">symphony &gt;&gt;</a></span>
+      	<span class="next"><a href="qpipoptmat.html">qpipoptmat &gt;&gt;</a></span>
 
       </td>
     </tr></table>
@@ -129,7 +129,7 @@ find the minimum of f(x) such that</p>
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="symphony.html">symphony &gt;&gt;</a></span>
+      	<span class="next"><a href="qpipoptmat.html">qpipoptmat &gt;&gt;</a></span>
 
       </td>
     </tr></table>
