--- a/help/en_US/scilab_en_US_help/symphony.html
+++ b/help/en_US/scilab_en_US_help/symphony.html
@@ -20,7 +20,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="symphonymat.html">symphonymat &gt;&gt;</a></span>
+      	<span class="next"><a href="symphony_mat.html">symphony_mat &gt;&gt;</a></span>
 
       </td>
     </tr></table>
@@ -205,7 +205,7 @@ find the minimum or maximum of f(x) such that</p>
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="symphonymat.html">symphonymat &gt;&gt;</a></span>
+      	<span class="next"><a href="symphony_mat.html">symphony_mat &gt;&gt;</a></span>
 
       </td>
     </tr></table>
