--- a/help/en_US/scilab_en_US_help/symphony_mat.html
+++ b/help/en_US/scilab_en_US_help/symphony_mat.html
@@ -20,7 +20,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="section_508f0b211d17ea6769714cc144e6b731.html">Symphony Native Functions &gt;&gt;</a></span>
+      	<span class="next"><a href="symphonymat.html">symphonymat &gt;&gt;</a></span>
 
       </td>
     </tr></table>
@@ -190,7 +190,7 @@ find the minimum or maximum of f(x) such that</p>
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="section_508f0b211d17ea6769714cc144e6b731.html">Symphony Native Functions &gt;&gt;</a></span>
+      	<span class="next"><a href="symphonymat.html">symphonymat &gt;&gt;</a></span>
 
       </td>
     </tr></table>
