--- a/help/en_US/scilab_en_US_help/qpipopt.html
+++ b/help/en_US/scilab_en_US_help/qpipopt.html
@@ -20,7 +20,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="qpipoptmat.html">qpipoptmat &gt;&gt;</a></span>
+      	<span class="next"><a href="qpipopt_mat.html">qpipopt_mat &gt;&gt;</a></span>
 
       </td>
     </tr></table>
@@ -138,7 +138,7 @@ find the minimum of f(x) such that</p>
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="qpipoptmat.html">qpipoptmat &gt;&gt;</a></span>
+      	<span class="next"><a href="qpipopt_mat.html">qpipopt_mat &gt;&gt;</a></span>
 
       </td>
     </tr></table>
