--- a/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
+++ b/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
@@ -37,6 +37,12 @@
 
 
 
+<li><a href="qpipopt_mat.html" class="refentry">qpipopt_mat</a> &#8212; <span class="refentry-description">Solves a linear quadratic problem.</span></li>
+
+
+
+
+
 <li><a href="qpipoptmat.html" class="refentry">qpipoptmat</a> &#8212; <span class="refentry-description">Solves a linear quadratic problem.</span></li>
 
 
@@ -44,6 +50,12 @@
 
 
 <li><a href="symphony.html" class="refentry">symphony</a> &#8212; <span class="refentry-description">Solves a  mixed integer linear programming constrained optimization problem.</span></li>
+
+
+
+
+
+<li><a href="symphony_mat.html" class="refentry">symphony_mat</a> &#8212; <span class="refentry-description">Solves a mixed integer linear programming constrained optimization problem in intlinprog format.</span></li>
 
 
 
