--- a/help/en_US/scilab_en_US_help/qpipopt.html
+++ b/help/en_US/scilab_en_US_help/qpipopt.html
@@ -12,7 +12,7 @@
     <div class="manualnavbar">
     <table width="100%"><tr>
       <td width="30%">
-    	<span class="previous"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">&lt;&lt; Symphony Toolbox</a></span>
+    	<span class="previous"><a href="lsqlin.html">&lt;&lt; lsqlin</a></span>
 
       </td>
       <td width="40%" class="center">
@@ -130,7 +130,7 @@ find the minimum of f(x) such that</p>
     <tr><td colspan="3" class="next"><a href="http://bugzilla.scilab.org/enter_bug.cgi?product=Scilab%20software&component=Documentation%20pages" class="ulink">Report an issue</a></td></tr>
 <tr>
       <td width="30%">
-    	<span class="previous"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">&lt;&lt; Symphony Toolbox</a></span>
+    	<span class="previous"><a href="lsqlin.html">&lt;&lt; lsqlin</a></span>
 
       </td>
       <td width="40%" class="center">
