--- a/help/en_US/scilab_en_US_help/qpipoptmat.html
+++ b/help/en_US/scilab_en_US_help/qpipoptmat.html
@@ -47,9 +47,9 @@
 
 <div class="refsection"><h3 class="title">Parameters</h3>
    <dl><dt><span class="term">H :</span>
-      <dd><p class="para">a vector of doubles, where n is number of variables, represents coefficients of quadratic in the quadratic problem.</p></dd></dt>
+      <dd><p class="para">a symmetric matrix of doubles, represents coefficients of quadratic in the quadratic problem.</p></dd></dt>
    <dt><span class="term">f :</span>
-      <dd><p class="para">a vector of doubles, where n is number of variables, represents coefficients of linear in the quadratic problem</p></dd></dt>
+      <dd><p class="para">a vector of doubles, represents coefficients of linear in the quadratic problem</p></dd></dt>
    <dt><span class="term">A :</span>
       <dd><p class="para">a vector of doubles, represents the linear coefficients in the inequality constraints</p></dd></dt>
    <dt><span class="term">b :</span>
@@ -59,9 +59,9 @@
    <dt><span class="term">beq :</span>
       <dd><p class="para">a vector of doubles, represents the linear coefficients in the equality constraints</p></dd></dt>
    <dt><span class="term">LB :</span>
-      <dd><p class="para">a vector of doubles, where n is number of variables, contains lower bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, contains lower bounds of the variables.</p></dd></dt>
    <dt><span class="term">UB :</span>
-      <dd><p class="para">a vector of doubles, where n is number of variables, contains upper bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, contains upper bounds of the variables.</p></dd></dt>
    <dt><span class="term">x0 :</span>
       <dd><p class="para">a vector of doubles, contains initial guess of variables.</p></dd></dt>
    <dt><span class="term">param :</span>
