--- a/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
+++ b/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
@@ -37,6 +37,12 @@
 
 
 
+<li><a href="lsqnonneg.html" class="refentry">lsqnonneg</a> &#8212; <span class="refentry-description">Solves nonnegative least-squares curve fitting problems.</span></li>
+
+
+
+
+
 <li><a href="qpipopt.html" class="refentry">qpipopt</a> &#8212; <span class="refentry-description">Solves a linear quadratic problem.</span></li>
 
 
