--- a/help/en_US/scilab_en_US_help/symphony.html
+++ b/help/en_US/scilab_en_US_help/symphony.html
@@ -48,7 +48,7 @@
    <dt><span class="term">nbCon :</span>
       <dd><p class="para">a double, number of constraints.</p></dd></dt>
    <dt><span class="term">objCoeff :</span>
-      <dd><p class="para">a 1 x n matrix of doubles, where n is number of variables, represents coefficients of the variables in the objective.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, represents coefficients of the variables in the objective.</p></dd></dt>
    <dt><span class="term">isInt :</span>
       <dd><p class="para">a vector of boolean, represents wether a variable is constrained to be an integer.</p></dd></dt>
    <dt><span class="term">LB :</span>
