--- a/help/en_US/scilab_en_US_help/qpipopt.html
+++ b/help/en_US/scilab_en_US_help/qpipopt.html
@@ -12,7 +12,7 @@
     <div class="manualnavbar">
     <table width="100%"><tr>
       <td width="30%">
-    	<span class="previous"><a href="lsqlin.html">&lt;&lt; lsqlin</a></span>
+    	<span class="previous"><a href="lsqnonneg.html">&lt;&lt; lsqnonneg</a></span>
 
       </td>
       <td width="40%" class="center">
@@ -54,7 +54,7 @@
    <dt><span class="term">LB :</span>
       <dd><p class="para">a vector of doubles, contains lower bounds of the variables.</p></dd></dt>
    <dt><span class="term">UB :</span>
-      <dd><p class="para">a vector of doubles, where n is number of variables, contains upper bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, contains upper bounds of the variables.</p></dd></dt>
    <dt><span class="term">conMatrix :</span>
       <dd><p class="para">a matrix of doubles, contains  matrix representing the constraint matrix</p></dd></dt>
    <dt><span class="term">conLB :</span>
@@ -130,7 +130,7 @@ find the minimum of f(x) such that</p>
     <tr><td colspan="3" class="next"><a href="http://bugzilla.scilab.org/enter_bug.cgi?product=Scilab%20software&component=Documentation%20pages" class="ulink">Report an issue</a></td></tr>
 <tr>
       <td width="30%">
-    	<span class="previous"><a href="lsqlin.html">&lt;&lt; lsqlin</a></span>
+    	<span class="previous"><a href="lsqnonneg.html">&lt;&lt; lsqnonneg</a></span>
 
       </td>
       <td width="40%" class="center">
