--- a/help/en_US/scilab_en_US_help/lsqlin.html
+++ b/help/en_US/scilab_en_US_help/lsqlin.html
@@ -46,31 +46,31 @@
 
 <div class="refsection"><h3 class="title">Parameters</h3>
    <dl><dt><span class="term">C :</span>
-      <dd><p class="para">a matrix of doubles, represents the multiplier of the solution x in the expression C*x - d. C is M-by-N, where M is the number of equations, and N is the number of elements of x.</p></dd></dt>
+      <dd><p class="para">a matrix of double, represents the multiplier of the solution x in the expression C*x - d. C is M-by-N, where M is the number of equations, and N is the number of elements of x.</p></dd></dt>
    <dt><span class="term">d :</span>
-      <dd><p class="para">a vector of doubles, represents the additive constant term in the expression C*x - d. d is M-by-1, where M is the number of equations.</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the additive constant term in the expression C*x - d. d is M-by-1, where M is the number of equations.</p></dd></dt>
    <dt><span class="term">A :</span>
-      <dd><p class="para">a vector of doubles, represents the linear coefficients in the inequality constraints</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the linear coefficients in the inequality constraints</p></dd></dt>
    <dt><span class="term">b :</span>
-      <dd><p class="para">a vector of doubles, represents the linear coefficients in the inequality constraints</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the linear coefficients in the inequality constraints</p></dd></dt>
    <dt><span class="term">Aeq :</span>
-      <dd><p class="para">a matrix of doubles, represents the linear coefficients in the equality constraints</p></dd></dt>
+      <dd><p class="para">a matrix of double, represents the linear coefficients in the equality constraints</p></dd></dt>
    <dt><span class="term">beq :</span>
-      <dd><p class="para">a vector of doubles, represents the linear coefficients in the equality constraints</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the linear coefficients in the equality constraints</p></dd></dt>
    <dt><span class="term">LB :</span>
-      <dd><p class="para">a vector of doubles, contains lower bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains lower bounds of the variables.</p></dd></dt>
    <dt><span class="term">UB :</span>
-      <dd><p class="para">a vector of doubles,  contains upper bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of double,  contains upper bounds of the variables.</p></dd></dt>
    <dt><span class="term">x0 :</span>
-      <dd><p class="para">a vector of doubles, contains initial guess of variables.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains initial guess of variables.</p></dd></dt>
    <dt><span class="term">param :</span>
       <dd><p class="para">a list containing the the parameters to be set.</p></dd></dt>
    <dt><span class="term">xopt :</span>
-      <dd><p class="para">a vector of doubles, the computed solution of the optimization problem.</p></dd></dt>
+      <dd><p class="para">a vector of double, the computed solution of the optimization problem.</p></dd></dt>
    <dt><span class="term">resnorm :</span>
       <dd><p class="para">a double, objective value returned as the scalar value norm(C*x-d)^2.</p></dd></dt>
    <dt><span class="term">residual :</span>
-      <dd><p class="para">a vector of doubles, solution residuals returned as the vector C*x-d.</p></dd></dt>
+      <dd><p class="para">a vector of double, solution residuals returned as the vector C*x-d.</p></dd></dt>
    <dt><span class="term">exitflag :</span>
       <dd><p class="para">Integer identifying the reason the algorithm terminated.</p></dd></dt>
    <dt><span class="term">output :</span>
