--- a/help/en_US/scilab_en_US_help/qpipopt.html
+++ b/help/en_US/scilab_en_US_help/qpipopt.html
@@ -48,25 +48,25 @@
    <dt><span class="term">nbCon :</span>
       <dd><p class="para">a double, number of constraints</p></dd></dt>
    <dt><span class="term">Q :</span>
-      <dd><p class="para">a symmetric matrix of doubles, represents coefficients of quadratic in the quadratic problem.</p></dd></dt>
+      <dd><p class="para">a symmetric matrix of double, represents coefficients of quadratic in the quadratic problem.</p></dd></dt>
    <dt><span class="term">p :</span>
-      <dd><p class="para">a vector of doubles, represents coefficients of linear in the quadratic problem</p></dd></dt>
+      <dd><p class="para">a vector of double, represents coefficients of linear in the quadratic problem</p></dd></dt>
    <dt><span class="term">LB :</span>
-      <dd><p class="para">a vector of doubles, contains lower bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains lower bounds of the variables.</p></dd></dt>
    <dt><span class="term">UB :</span>
-      <dd><p class="para">a vector of doubles, contains upper bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains upper bounds of the variables.</p></dd></dt>
    <dt><span class="term">conMatrix :</span>
-      <dd><p class="para">a matrix of doubles, contains  matrix representing the constraint matrix</p></dd></dt>
+      <dd><p class="para">a matrix of double, contains  matrix representing the constraint matrix</p></dd></dt>
    <dt><span class="term">conLB :</span>
-      <dd><p class="para">a vector of doubles, contains lower bounds of the constraints.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains lower bounds of the constraints.</p></dd></dt>
    <dt><span class="term">conUB :</span>
-      <dd><p class="para">a vector of doubles, contains upper bounds of the constraints.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains upper bounds of the constraints.</p></dd></dt>
    <dt><span class="term">x0 :</span>
-      <dd><p class="para">a vector of doubles, contains initial guess of variables.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains initial guess of variables.</p></dd></dt>
    <dt><span class="term">param :</span>
       <dd><p class="para">a list containing the the parameters to be set.</p></dd></dt>
    <dt><span class="term">xopt :</span>
-      <dd><p class="para">a vector of doubles, the computed solution of the optimization problem.</p></dd></dt>
+      <dd><p class="para">a vector of double, the computed solution of the optimization problem.</p></dd></dt>
    <dt><span class="term">fopt :</span>
       <dd><p class="para">a double, the function value at x.</p></dd></dt>
    <dt><span class="term">exitflag :</span>
