--- a/help/en_US/scilab_en_US_help/qpipoptmat.html
+++ b/help/en_US/scilab_en_US_help/qpipoptmat.html
@@ -47,27 +47,27 @@
 
 <div class="refsection"><h3 class="title">Parameters</h3>
    <dl><dt><span class="term">H :</span>
-      <dd><p class="para">a symmetric matrix of doubles, represents coefficients of quadratic in the quadratic problem.</p></dd></dt>
+      <dd><p class="para">a symmetric matrix of double, represents coefficients of quadratic in the quadratic problem.</p></dd></dt>
    <dt><span class="term">f :</span>
-      <dd><p class="para">a vector of doubles, represents coefficients of linear in the quadratic problem</p></dd></dt>
+      <dd><p class="para">a vector of double, represents coefficients of linear in the quadratic problem</p></dd></dt>
    <dt><span class="term">A :</span>
-      <dd><p class="para">a vector of doubles, represents the linear coefficients in the inequality constraints</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the linear coefficients in the inequality constraints</p></dd></dt>
    <dt><span class="term">b :</span>
-      <dd><p class="para">a vector of doubles, represents the linear coefficients in the inequality constraints</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the linear coefficients in the inequality constraints</p></dd></dt>
    <dt><span class="term">Aeq :</span>
-      <dd><p class="para">a matrix of doubles, represents the linear coefficients in the equality constraints</p></dd></dt>
+      <dd><p class="para">a matrix of double, represents the linear coefficients in the equality constraints</p></dd></dt>
    <dt><span class="term">beq :</span>
-      <dd><p class="para">a vector of doubles, represents the linear coefficients in the equality constraints</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the linear coefficients in the equality constraints</p></dd></dt>
    <dt><span class="term">LB :</span>
-      <dd><p class="para">a vector of doubles, contains lower bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains lower bounds of the variables.</p></dd></dt>
    <dt><span class="term">UB :</span>
-      <dd><p class="para">a vector of doubles, contains upper bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains upper bounds of the variables.</p></dd></dt>
    <dt><span class="term">x0 :</span>
-      <dd><p class="para">a vector of doubles, contains initial guess of variables.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains initial guess of variables.</p></dd></dt>
    <dt><span class="term">param :</span>
       <dd><p class="para">a list containing the the parameters to be set.</p></dd></dt>
    <dt><span class="term">xopt :</span>
-      <dd><p class="para">a vector of doubles, the computed solution of the optimization problem.</p></dd></dt>
+      <dd><p class="para">a vector of double, the computed solution of the optimization problem.</p></dd></dt>
    <dt><span class="term">fopt :</span>
       <dd><p class="para">a double, the function value at x.</p></dd></dt>
    <dt><span class="term">exitflag :</span>
@@ -114,7 +114,7 @@ find the minimum of f(x) such that</p>
 <span class="scilabid">ub</span><span class="scilaboperator">=</span><span class="scilabopenclose">[</span><span class="scilabnumber">10000</span><span class="scilabdefault">;</span> <span class="scilabnumber">100</span><span class="scilabdefault">;</span> <span class="scilabnumber">1.5</span><span class="scilabdefault">;</span> <span class="scilabnumber">100</span><span class="scilabdefault">;</span> <span class="scilabnumber">100</span><span class="scilabdefault">;</span> <span class="scilabnumber">1000</span><span class="scilabopenclose">]</span><span class="scilabdefault">;</span>
 <span class="scilabid">x0</span> <span class="scilaboperator">=</span> <a class="scilabmacro" href="scilab://repmat">repmat</a><span class="scilabopenclose">(</span><span class="scilabnumber">0</span><span class="scilabdefault">,</span><span class="scilabnumber">6</span><span class="scilabdefault">,</span><span class="scilabnumber">1</span><span class="scilabopenclose">)</span><span class="scilabdefault">;</span>
 <span class="scilabid">param</span> <span class="scilaboperator">=</span> <a class="scilabcommand" href="scilab://list">list</a><span class="scilabopenclose">(</span><span class="scilabstring">&#0034;</span><span class="scilabstring">MaxIter</span><span class="scilabstring">&#0034;</span><span class="scilabdefault">,</span> <span class="scilabnumber">300</span><span class="scilabdefault">,</span> <span class="scilabstring">&#0034;</span><span class="scilabstring">CpuTime</span><span class="scilabstring">&#0034;</span><span class="scilabdefault">,</span> <span class="scilabnumber">100</span><span class="scilabopenclose">)</span><span class="scilabdefault">;</span>
-<span class="scilabcomment">//and minimize 0.5*x</span><span class="scilabcomment">&#0039;</span><span class="scilabcomment">*Q*x + p</span><span class="scilabcomment">&#0039;</span><span class="scilabcomment">*x with</span>
+<span class="scilabcomment">//and minimize 0.5*x</span><span class="scilabcomment">&#0039;</span><span class="scilabcomment">*H*x + f</span><span class="scilabcomment">&#0039;</span><span class="scilabcomment">*x with</span>
 <span class="scilabid">f</span><span class="scilaboperator">=</span><span class="scilabopenclose">[</span><span class="scilabnumber">1</span><span class="scilabdefault">;</span> <span class="scilabnumber">2</span><span class="scilabdefault">;</span> <span class="scilabnumber">3</span><span class="scilabdefault">;</span> <span class="scilabnumber">4</span><span class="scilabdefault">;</span> <span class="scilabnumber">5</span><span class="scilabdefault">;</span> <span class="scilabnumber">6</span><span class="scilabopenclose">]</span><span class="scilabdefault">;</span> <span class="scilabid">H</span><span class="scilaboperator">=</span><a class="scilabcommand" href="scilab://eye">eye</a><span class="scilabopenclose">(</span><span class="scilabnumber">6</span><span class="scilabdefault">,</span><span class="scilabnumber">6</span><span class="scilabopenclose">)</span><span class="scilabdefault">;</span>
 <span class="scilabopenclose">[</span><span class="scilabid">xopt</span><span class="scilabdefault">,</span><span class="scilabid">fopt</span><span class="scilabdefault">,</span><span class="scilabid">exitflag</span><span class="scilabdefault">,</span><span class="scilabid">output</span><span class="scilabdefault">,</span><span class="scilabid">lambda</span><span class="scilabopenclose">]</span><span class="scilaboperator">=</span><span class="scilabid">qpipoptmat</span><span class="scilabopenclose">(</span><span class="scilabid">H</span><span class="scilabdefault">,</span><span class="scilabid">f</span><span class="scilabdefault">,</span><span class="scilabid">A</span><span class="scilabdefault">,</span><span class="scilabid">b</span><span class="scilabdefault">,</span><span class="scilabid">Aeq</span><span class="scilabdefault">,</span><span class="scilabid">beq</span><span class="scilabdefault">,</span><span class="scilabid">lb</span><span class="scilabdefault">,</span><span class="scilabid">ub</span><span class="scilabdefault">,</span><span class="scilabopenclose">[</span><span class="scilabopenclose">]</span><span class="scilabdefault">,</span><span class="scilabid">param</span><span class="scilabopenclose">)</span></pre></td><td valign="top"><a href="scilab://scilab.execexample/"><img src="ScilabExecute.png" border="0"/></a></td><td valign="top"><a href="scilab://scilab.editexample/"><img src="ScilabEdit.png" border="0"/></a></td><td></td></tr></table></div></div>
 
