lower bound, upper bound test added
Former-commit-id: 1c0fba3c0fadb9d346473e056c160f526d6f40a6

--- a/help/en_US/scilab_en_US_help/qpipopt.html
+++ b/help/en_US/scilab_en_US_help/qpipopt.html
@@ -56,11 +56,11 @@
    <dt><span class="term">ub :</span>
       <dd><p class="para">a vector of double, contains upper bounds of the variables.</p></dd></dt>
    <dt><span class="term">A :</span>
-      <dd><p class="para">a matrix of double, contains the constraint matrix</p></dd></dt>
+      <dd><p class="para">a matrix of double, contains the constraint matrix conLB ≤ A⋅x ≤ conUB.</p></dd></dt>
    <dt><span class="term">conLB :</span>
-      <dd><p class="para">a vector of double, contains lower bounds of the constraints.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains lower bounds of the constraints conLB ≤ A⋅x ≤ conUB.</p></dd></dt>
    <dt><span class="term">conUB :</span>
-      <dd><p class="para">a vector of double, contains upper bounds of the constraints.</p></dd></dt>
+      <dd><p class="para">a vector of double, contains upper bounds of the constraints conLB ≤ A⋅x ≤ conUB.</p></dd></dt>
    <dt><span class="term">x0 :</span>
       <dd><p class="para">a vector of double, contains initial guess of variables.</p></dd></dt>
    <dt><span class="term">param :</span>
