--- a/help/en_US/scilab_en_US_help/qpipoptmat.html
+++ b/help/en_US/scilab_en_US_help/qpipoptmat.html
@@ -51,13 +51,13 @@
    <dt><span class="term">f :</span>
       <dd><p class="para">a vector of double, represents coefficients of linear in the quadratic problem</p></dd></dt>
    <dt><span class="term">A :</span>
-      <dd><p class="para">a vector of double, represents the linear coefficients in the inequality constraints</p></dd></dt>
+      <dd><p class="para">a matrix of double, represents the linear coefficients in the inequality constraints A⋅x ≤ b.</p></dd></dt>
    <dt><span class="term">b :</span>
-      <dd><p class="para">a vector of double, represents the linear coefficients in the inequality constraints</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the linear coefficients in the inequality constraints A⋅x ≤ b.</p></dd></dt>
    <dt><span class="term">Aeq :</span>
-      <dd><p class="para">a matrix of double, represents the linear coefficients in the equality constraints</p></dd></dt>
+      <dd><p class="para">a matrix of double, represents the linear coefficients in the equality constraints Aeq⋅x = beq.</p></dd></dt>
    <dt><span class="term">beq :</span>
-      <dd><p class="para">a vector of double, represents the linear coefficients in the equality constraints</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the linear coefficients in the equality constraints Aeq⋅x = beq.</p></dd></dt>
    <dt><span class="term">lb :</span>
       <dd><p class="para">a vector of double, contains lower bounds of the variables.</p></dd></dt>
    <dt><span class="term">ub :</span>
