--- a/help/en_US/scilab_en_US_help/lsqnonneg.html
+++ b/help/en_US/scilab_en_US_help/lsqnonneg.html
@@ -43,15 +43,15 @@
 
 <div class="refsection"><h3 class="title">Parameters</h3>
    <dl><dt><span class="term">C :</span>
-      <dd><p class="para">a matrix of double, represents the multiplier of the solution x in the expression C*x - d. Number of columns in C is equal to the number of elements in x.</p></dd></dt>
+      <dd><p class="para">a matrix of double, represents the multiplier of the solution x in the expression C⋅x - d. Number of columns in C is equal to the number of elements in x.</p></dd></dt>
    <dt><span class="term">d :</span>
-      <dd><p class="para">a vector of double, represents the additive constant term in the expression C*x - d. Number of elements in d is equal to the number of rows in C matrix.</p></dd></dt>
+      <dd><p class="para">a vector of double, represents the additive constant term in the expression C⋅x - d. Number of elements in d is equal to the number of rows in C matrix.</p></dd></dt>
    <dt><span class="term">xopt :</span>
       <dd><p class="para">a vector of double, the computed solution of the optimization problem.</p></dd></dt>
    <dt><span class="term">resnorm :</span>
-      <dd><p class="para">a double, objective value returned as the scalar value norm(C*x-d)^2.</p></dd></dt>
+      <dd><p class="para">a double, objective value returned as the scalar value norm(C⋅x-d)^2.</p></dd></dt>
    <dt><span class="term">residual :</span>
-      <dd><p class="para">a vector of double, solution residuals returned as the vector d-C*x.</p></dd></dt>
+      <dd><p class="para">a vector of double, solution residuals returned as the vector d-C⋅x.</p></dd></dt>
    <dt><span class="term">exitflag :</span>
       <dd><p class="para">The exit status. See below for details.</p></dd></dt>
    <dt><span class="term">output :</span>
