--- a/help/en_US/scilab_en_US_help/symphony.html
+++ b/help/en_US/scilab_en_US_help/symphony.html
@@ -56,11 +56,11 @@
    <dt><span class="term">ub :</span>
       <dd><p class="para">a vector of double, represents upper bounds of the variables.</p></dd></dt>
    <dt><span class="term">A :</span>
-      <dd><p class="para">a matrix of double, represents  matrix representing the constraint matrix.</p></dd></dt>
+      <dd><p class="para">a matrix of double, represents  matrix representing the constraint matrix conLB ≤ A⋅x ≤ conUB.</p></dd></dt>
    <dt><span class="term">conLB :</span>
-      <dd><p class="para">a vector of double, represents lower bounds of the constraints.</p></dd></dt>
+      <dd><p class="para">a vector of double, represents lower bounds of the constraints conLB ≤ A⋅x ≤ conUB.</p></dd></dt>
    <dt><span class="term">conUB :</span>
-      <dd><p class="para">a vector of double, represents upper bounds of the constraints</p></dd></dt>
+      <dd><p class="para">a vector of double, represents upper bounds of the constraints conLB ≤ A⋅x ≤ conUB.</p></dd></dt>
    <dt><span class="term">objSense :</span>
       <dd><p class="para">The sense (maximization/minimization) of the objective. Use 1(sym_minimize ) or -1 (sym_maximize) here.</p></dd></dt>
    <dt><span class="term">options :</span>
