--- a/help/en_US/scilab_en_US_help/index.html
+++ b/help/en_US/scilab_en_US_help/index.html
@@ -32,7 +32,37 @@
 <ul class="list-part"><a name="symphony_toolbox_manual"></a><div class="info"></div>
 
 <li><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html" class="part">Symphony Toolbox</a>
-<ul class="list-chapter"><li><a href="lsqlin.html" class="refentry">lsqlin</a> &#8212; <span class="refentry-description">Solves a linear quadratic problem.</span></li>
+<ul class="list-chapter"><li><a href="fgoalattain.html" class="refentry">fgoalattain</a> &#8212; <span class="refentry-description">Solves a multiobjective goal attainment problem</span></li>
+
+
+
+
+
+<li><a href="fminbnd.html" class="refentry">fminbnd</a> &#8212; <span class="refentry-description">Solves a multi-variable optimization problem on a bounded interval</span></li>
+
+
+
+
+
+<li><a href="fmincon.html" class="refentry">fmincon</a> &#8212; <span class="refentry-description">Solves a multi-variable constrainted optimization problem</span></li>
+
+
+
+
+
+<li><a href="fminunc.html" class="refentry">fminunc</a> &#8212; <span class="refentry-description">Solves a multi-variable unconstrainted optimization problem</span></li>
+
+
+
+
+
+<li><a href="linprog.html" class="refentry">linprog</a> &#8212; <span class="refentry-description">Solves a linear programming problem.</span></li>
+
+
+
+
+
+<li><a href="lsqlin.html" class="refentry">lsqlin</a> &#8212; <span class="refentry-description">Solves a linear quadratic problem.</span></li>
 
 
 
