--- a/help/en_US/scilab_en_US_help/lsqlin.html
+++ b/help/en_US/scilab_en_US_help/lsqlin.html
@@ -12,7 +12,7 @@
     <div class="manualnavbar">
     <table width="100%"><tr>
       <td width="30%">
-    	<span class="previous"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">&lt;&lt; Symphony Toolbox</a></span>
+    	<span class="previous"><a href="linprog.html">&lt;&lt; linprog</a></span>
 
       </td>
       <td width="40%" class="center">
@@ -151,7 +151,7 @@ It has type &#0034;struct&#0034; and contains the following fields.
     <tr><td colspan="3" class="next"><a href="http://bugzilla.scilab.org/enter_bug.cgi?product=Scilab%20software&component=Documentation%20pages" class="ulink">Report an issue</a></td></tr>
 <tr>
       <td width="30%">
-    	<span class="previous"><a href="section_19f4f1e5726c01d683e8b82be0a7e910.html">&lt;&lt; Symphony Toolbox</a></span>
+    	<span class="previous"><a href="linprog.html">&lt;&lt; linprog</a></span>
 
       </td>
       <td width="40%" class="center">
