--- a/help/en_US/scilab_en_US_help/fminunc.html
+++ b/help/en_US/scilab_en_US_help/fminunc.html
@@ -12,7 +12,7 @@
     <div class="manualnavbar">
     <table width="100%"><tr>
       <td width="30%">
-    	<span class="previous"><a href="fmincon.html">&lt;&lt; fmincon</a></span>
+    	<span class="previous"><a href="fminimax.html">&lt;&lt; fminimax</a></span>
 
       </td>
       <td width="40%" class="center">
@@ -160,7 +160,7 @@ It has type &#0034;struct&#0034; and contains the following fields.
     <tr><td colspan="3" class="next"><a href="http://bugzilla.scilab.org/enter_bug.cgi?product=Scilab%20software&component=Documentation%20pages" class="ulink">Report an issue</a></td></tr>
 <tr>
       <td width="30%">
-    	<span class="previous"><a href="fmincon.html">&lt;&lt; fmincon</a></span>
+    	<span class="previous"><a href="fminimax.html">&lt;&lt; fminimax</a></span>
 
       </td>
       <td width="40%" class="center">
