--- a/help/en_US/scilab_en_US_help/index.html
+++ b/help/en_US/scilab_en_US_help/index.html
@@ -50,6 +50,12 @@
 
 
 
+<li><a href="fminimax.html" class="refentry">fminimax</a> &#8212; <span class="refentry-description">Solves minimax constraint problem</span></li>
+
+
+
+
+
 <li><a href="fminunc.html" class="refentry">fminunc</a> &#8212; <span class="refentry-description">Solves a multi-variable unconstrainted optimization problem</span></li>
 
 
