--- a/help/en_US/scilab_en_US_help/fmincon.html
+++ b/help/en_US/scilab_en_US_help/fmincon.html
@@ -20,7 +20,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="fminunc.html">fminunc &gt;&gt;</a></span>
+      	<span class="next"><a href="fminimax.html">fminimax &gt;&gt;</a></span>
 
       </td>
     </tr></table>
@@ -292,7 +292,7 @@ It has type &#0034;struct&#0034; and contains the following fields.
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="fminunc.html">fminunc &gt;&gt;</a></span>
+      	<span class="next"><a href="fminimax.html">fminimax &gt;&gt;</a></span>
 
       </td>
     </tr></table>
