linprog help updated
Former-commit-id: e5d6e0637c5fcd15c4887e51ddfbd2d199719c33

--- a/help/en_US/scilab_en_US_help/linprog.html
+++ b/help/en_US/scilab_en_US_help/linprog.html
@@ -100,7 +100,8 @@ It has type &#0034;struct&#0034; and contains the following fields.
    <p class="para">The lambda data structure contains the Lagrange multipliers at the end
 of optimization. In the current version the values are returned only when the the solution is optimal.
 It has type &#0034;struct&#0034; and contains the following fields.
-<ul class="itemizedlist"><li>lambda.eqlin: The Lagrange multipliers for the linear equality constraints.</li>
+<ul class="itemizedlist"><li>lambda.lower: The Lagrange multipliers for variable lower bounds.</li>
+<li>lambda.eqlin: The Lagrange multipliers for the linear equality constraints.</li>
 <li>lambda.ineqlin: The Lagrange multipliers for the linear inequality constraints.</li></ul></p>
    <p class="para"></p></div>
 
