--- a/help/en_US/scilab_en_US_help/lsqlin.html
+++ b/help/en_US/scilab_en_US_help/lsqlin.html
@@ -20,7 +20,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="lsqnonneg.html">lsqnonneg &gt;&gt;</a></span>
+      	<span class="next"><a href="lsqnonlin.html">lsqnonlin &gt;&gt;</a></span>
 
       </td>
     </tr></table>
@@ -165,7 +165,7 @@ It has type &#0034;struct&#0034; and contains the following fields.
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="lsqnonneg.html">lsqnonneg &gt;&gt;</a></span>
+      	<span class="next"><a href="lsqnonlin.html">lsqnonlin &gt;&gt;</a></span>
 
       </td>
     </tr></table>
