--- a/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
+++ b/help/en_US/scilab_en_US_help/section_19f4f1e5726c01d683e8b82be0a7e910.html
@@ -73,6 +73,12 @@
 
 
 
+<li><a href="lsqnonlin.html" class="refentry">lsqnonlin</a> &#8212; <span class="refentry-description">Solves a non linear data fitting problems.</span></li>
+
+
+
+
+
 <li><a href="lsqnonneg.html" class="refentry">lsqnonneg</a> &#8212; <span class="refentry-description">Solves nonnegative least-squares curve fitting problems.</span></li>
 
 
